# nodify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  copyright
.github/ISSUE_TEMPLATE/: bug-report.yml
examples/: fibonacci.rs  frog_jump_with_copy_node.rs  frog_jump_without_copy_node.rs  knapsack.rs  nodifyied.rs  simple_nodifyied.rs
src/: lib.rs  nodifyied.rs  prelude.rs  process.rs
src/process/: delta.rs  dfs.rs  parallel_dfs.rs
