[package]
name = "nodify"
version = "0.1.0"
authors = ["Mattéo Rossillol‑‑Laruelle <beatussum@protonmail.com>"]
edition = "2024"
description = "A small crate providing utilies to explore graph (boosted by Rayon)"
repository = "https://github.com/beatussum/nodify"
license = "GPL-3.0-or-later"
keywords = ["algorithms", "graph"]
categories = ["algorithms"]

[dependencies]
ahash = "0.8.12"
cfg-if = "1.0.1"
dashmap = { version = "6.1.0", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
rand = "0.9.1"

[features]
rayon = ["dep:dashmap", "dep:rayon"]
